tests/invalid/Assign_Invalid_7.whiley
function f(int x, int y) -> int:
    return x < y
